fixed alignment issues

--- a/src/components/AppBar/styles.css
+++ b/src/components/AppBar/styles.css
@@ -16,7 +16,7 @@
 
 .nav-menu-cart {
     position: relative;
-    margin-left: 10px;
+    /* margin-left: 10px; */
 }
 
 .nav-menu-cart .badge {
